--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,10 +48,12 @@ dependencies {
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.1'
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.10.1")
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.1'
     testImplementation 'org.hamcrest:hamcrest-library:2.2'
+    testImplementation 'org.mockito:mockito-core:5.8.0'
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.8.0'
 
-    errorprone("com.google.errorprone:error_prone_core:2.24.1")
+    errorprone 'com.google.errorprone:error_prone_core:2.24.1'
 }
 
 tasks.withType(JavaCompile).configureEach {
