--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,9 +1,9 @@
 name: Upload release
 
+# https://docs.github.com/en/webhooks/webhook-events-and-payloads#release
 on:
-  # https://docs.github.com/en/webhooks/webhook-events-and-payloads#release
   release:
-    types: [published]
+    types: [created, edited, published]
 
 concurrency:
   # Concurrency group that uses the workflow name and PR number if available
