--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,69 +3,69 @@ name: Upload release
 # https://docs.github.com/en/webhooks/webhook-events-and-payloads#release
 on:
   release:
-on:
-  release:
     types:
       - published
       - created
       - edited
 
-concurrency:
+#concurrency:
   # Concurrency group that uses the workflow name and PR number if available
   # or commit SHA as a fallback. If a new build is triggered under that
   # concurrency group while a previous build is running it will be canceled.
   # Repeated pushes to a PR will cancel all previous builds, while multiple
   # merges to main will not cancel.
-  group: ${{ github.workflow }}-${{ github.ref_name || github.event.release.tag_name || github.sha }}
-  cancel-in-progress: true
+  #group: ${{ github.workflow }}-${{ github.ref_name || github.event.release.tag_name || github.sha }}
+  #cancel-in-progress: true
 
-permissions:
-  contents: write
+#permissions:
+#  contents: write
 
 jobs:
   # create source archive and upload it to the published release
   # URL to the archive: https://github.com/conda/<repo>/releases/download/<tag>/<repo>-<tag>.tar.gz
   upload:
-    if: '!github.event.repository.fork'
+#    if: '!github.event.repository.fork'
     runs-on: ubuntu-latest
     env:
       ARCHIVE_NAME: ${{ github.event.repository.name }}-${{ github.event.release.tag_name }}
     steps:
-      - name: Checkout Source
-        uses: actions/checkout@v5
+       - name: print info
+         run: echo "${{ env.ARCHIVE_NAME }}"
+#      - name: Checkout Source
+#        uses: actions/checkout@v5
 #        with:
 #          - ref: ${{ github.event.release.tag_name }}
 
-      - name: Create Release Directory
-        run: mkdir -p release
+#      - name: Create Release Directory
+#        run: mkdir -p release
 
-      - name: Run Tests
-        run: |
-          bash ./gradlew lint --stacktrace
-          bash ./gradlew testDebugUnitTest --stacktrace
+#      - name: Run Tests
+#        run: |
+#          bash ./gradlew lint --stacktrace
+#          bash ./gradlew testDebugUnitTest --stacktrace
 
-      - name: Build APK
-        run: |
-          bash ./gradlew lint --stacktrace
-          bash ./gradlew testDebugUnitTest --stacktrace
-          bash ./gradlew assembleRelease --stacktrace
-          cp "app/build/outputs/apk/release/app-release-unsigned.apk" "release/"
+#      - name: Build APK
+#        run: |
+#          bash ./gradlew lint --stacktrace
+#          bash ./gradlew testDebugUnitTest --stacktrace
+#          bash ./gradlew assembleRelease --stacktrace
+#          cp "app/build/outputs/apk/release/app-release-unsigned.apk" "release/"
 
-      - name: Archive Source
-        run: |
-          git archive --format=tar.gz --prefix="${{ env.ARCHIVE_NAME }}/" --output="release/${{ env.ARCHIVE_NAME }}.tar.gz" HEAD
-          git archive --format=zip --prefix="${{ env.ARCHIVE_NAME }}/" --output="release/${{ env.ARCHIVE_NAME }}.zip" HEAD
+#      - name: Archive Source
+#        run: |
+#          git archive --format=tar.gz --prefix="${{ env.ARCHIVE_NAME }}/" --output="release/${{ env.ARCHIVE_NAME }}.tar.gz" HEAD
+#          git archive --format=zip --prefix="${{ env.ARCHIVE_NAME }}/" --output="release/${{ env.ARCHIVE_NAME }}.zip" HEAD
 
-      - name: Compute Checksum
-        run: |
-          sha256sum "release/${{ env.ARCHIVE_NAME }}.tar.gz" | awk '{print $1}' > "release/${{ env.ARCHIVE_NAME }}.tar.gz.sha256sum"
-          sha256sum "release/${{ env.ARCHIVE_NAME }}.zip" | awk '{print $1}' > "release/${{ env.ARCHIVE_NAME }}.zip.sha256sum"
+#      - name: Compute Checksum
+#        run: |
+#          sha256sum "release/${{ env.ARCHIVE_NAME }}.tar.gz" | awk '{print $1}' > "release/${{ env.ARCHIVE_NAME }}.tar.gz.sha256sum"
+#          sha256sum "release/${{ env.ARCHIVE_NAME }}.zip" | awk '{print $1}' > "release/${{ env.ARCHIVE_NAME }}.zip.sha256sum"
 
-      - name: Upload Files
-        env:
-          GH_TOKEN: ${{ github.token }}
-        run: >
-          gh release upload
-          --clobber "${{ github.event.release.tag_name }}"
-          --repo "${{ github.repository }}"
-          release/*
+#      - name: Upload Files
+#        env:
+#          GH_TOKEN: ${{ github.token }}
+#        run: >
+#          gh release upload
+#          --clobber "${{ github.event.release.tag_name }}"
+#          --repo "${{ github.repository }}"
+#          release/*
