--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,9 +19,8 @@ permissions:
 
 jobs:
   # create source archive and upload it to the published release
-  # URL to the archive: https://github.com/conda/<repo>/releases/download/<tag>/<repo>-<tag>.tar.gz
   upload:
-    #if: '!github.event.repository.fork'
+    if: '!github.event.repository.fork'
     runs-on: ubuntu-latest
     env:
       ARCHIVE_NAME: ${{ github.event.repository.name }}-${{ github.event.release.tag_name }}
