--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Build APKs
         run: |
           bash ./gradlew assembleDebug --stacktrace
-          cp "path: app/build/outputs/apk/debug/app-debug.apk" "release/"
+          cp "app/build/outputs/apk/debug/app-debug.apk" "release/"
           bash ./gradlew assembleRelease --stacktrace
           cp "app/build/outputs/apk/release/app-release-unsigned.apk" "release/"
 
