--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Publish app
+name: Upload app to release
 
 # https://docs.github.com/en/webhooks/webhook-events-and-payloads#release
 on:
@@ -39,8 +39,8 @@ jobs:
       - name: Build APKs
         run: |
           bash ./gradlew assembleDebug --stacktrace
-          cp "app/build/outputs/apk/debug/app-debug.apk" "release/"
           bash ./gradlew assembleRelease --stacktrace
+          cp "app/build/outputs/apk/debug/app-debug.apk" "release/"
           cp "app/build/outputs/apk/release/app-release-unsigned.apk" "release/"
 
       - name: Upload Files
